<resources>
    <string name="app_name">SkyNet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_device">Devices</string>
    <string name="menu_automation">Automation</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="title_activity_login">Login</string>

    <string name="title_text">Hookup to\nSkyNet</string>
    <!-- Custom Strings for Application -->
    <string name="signed_in_name">Welcome %s</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="no_device_found">You dont have a device Set Up.\n</string>
    <string name="new_device_setup">Setup a New Device</string>
    <string name="google_status_fmt">Signed in as: %s</string>
    <string name="firebase_status_fmt">Name: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="get_in">Get In</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="ssid">SkyNet-AutoConfig</string>
    <string name="key">skynet</string>
    <string name="title_activity_check">CheckActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_device_setup">DeviceSetup</string>
    <string name="refresh">Refresh</string>
    <string name="connect">Connect</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="URL">http://192.168.4.1/i</string>
    <string name="no_home_found">You don\'t have a \"Home\" set up.</string>
    <string name="title_activity_setup_home">SetupHome</string>
    <string name="home_name">Home Name</string>
    <string name="title_activity_tmp">tmp</string>
    <string name="title_activity_my_home">myHome</string>
    <string name="textHome">Your SetUp Homes</string>
    <string name="textDevice">Your unassigned Devices</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_device_detail">DeviceDetail</string>
    <string name="title_activity_home_detail">HomeDetail</string>
    <string name="deviceName" />
    <string name="add_home">Add Home</string>
    <string name="textAssignedDevice">Your Assigned Devices</string>
    <string name="name12">Name12</string>
    <string name="textview">TextView</string>
    <string name="add_config">Add Config</string>
    <string name="title_activity_device_config">DeviceConfig</string>
    <string name="addInput">addInput</string>
    <string name="addValue">addValue</string>
    <string name="addOutput">Output</string>
    <string name="addState">Add State</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_gallery">Devices</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment<br />fdfggdfgdfgfdgdfgdfgdfvfdvsdvdsvdsvdvdssffsfsfdsfdsfadfdsfs                                                                        gsggsfdsfd                                                           ggfdfgd                                                        fdfdsfdf                              ffdgdg                                                                                                   66666 </string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="set_home">Set Home</string>
    <string name="give_a_name_to_your_new_home">Give a name to your new Home</string>
    <string name="get_address">Get Address</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Coordinates</string>
    <string name="no_address_found">No Address Found</string>
    <string name="todo">TODO</string>
    <string name="settings">settings</string>
    <string name="button">Yes</string>
    <string name="you_don_t_have_a_device_added_if_you_have_a_devce_click_above">You don\'t have a Device added. If you have a devce click Above.</string>
    <string name="no">No</string>
    <string name="attached_devices">Attached Devices</string>
    <string name="available_devices">Available Devices</string>

</resources>