<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="in.co.maxxwarez.skynet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_device"
        android:name="in.co.maxxwarez.skynet.ui.devices.DeviceFragment"
        android:label="@string/menu_device"
        tools:layout="@layout/fragment_device" />

    <fragment
        android:id="@+id/nav_automation"
        android:name="in.co.maxxwarez.skynet.ui.automation.AutomationFragment"
        android:label="@string/menu_automation"
        tools:layout="@layout/fragment_automation" />
</navigation>